chore - clean-up files to remove IDEA warnings